artifacts/interest-scheduler-respects-activation_direct_989525400/traceback.txt
Traceback (most recent call last):
  File "C:\Users\gary\dragonsire\diretest.py", line 2798, in _execute_cli_scenario
    handler_result = args.handler(args)
                     ^^^^^^^^^^^^^^^^^^
  File "C:\Users\gary\dragonsire\diretest.py", line 2288, in run_interest_scheduler_respects_activation_scenario
    _setup_django()
  File "C:\Users\gary\dragonsire\diretest.py", line 132, in _setup_django
    evennia._init()
  File "C:\Users\gary\dragonsire\.venv\Lib\site-packages\evennia\__init__.py", line 292, in _init
    EVENNIA_SERVER_SERVICE = _evennia_service_class()
                             ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\gary\dragonsire\.venv\Lib\site-packages\evennia\server\service.py", line 68, in __init__
    self.start_stop_modules = [
                              ^
  File "C:\Users\gary\dragonsire\.venv\Lib\site-packages\evennia\server\service.py", line 69, in <listcomp>
    mod_import(mod)
  File "C:\Users\gary\dragonsire\.venv\Lib\site-packages\evennia\utils\utils.py", line 1421, in mod_import
    return importlib.import_module(module)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\gary\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1206, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1178, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1149, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\gary\dragonsire\server\conf\at_server_startstop.py", line 34, in <module>
    from world.systems.timing_audit import register_ticker_metadata, unregister_ticker_metadata
  File "C:\Users\gary\dragonsire\world\systems\timing_audit.py", line 11, in <module>
    from world.systems.scheduler import get_scheduler_snapshot
  File "C:\Users\gary\dragonsire\world\systems\scheduler.py", line 236
    def _reject_job(record_or_metadata, reason, **extra):
    ^^^
IndentationError: expected an indented block after function definition on line 235
